{
  "version": 4,
  "terraform_version": "1.1.2",
  "serial": 459,
  "lineage": "7396957d-7821-b5b5-88bc-de7d928bad90",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway",
      "name": "tgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "amazon_side_asn": 64512,
            "arn": "arn:aws:ec2:eu-central-1:283901980185:transit-gateway/tgw-0e89e6f22bbf4ccab",
            "auto_accept_shared_attachments": "disable",
            "default_route_table_association": "disable",
            "default_route_table_propagation": "disable",
            "description": "Transit Gateway",
            "dns_support": "enable",
            "id": "tgw-0e89e6f22bbf4ccab",
            "owner_id": "283901980185",
            "tags": {
              "Name": "transit_gateway"
            },
            "tags_all": {
              "Name": "transit_gateway"
            },
            "vpn_ecmp_support": "enable"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "blackhole": false,
            "destination_cidr_block": "0.0.0.0/0",
            "id": "tgw-rtb-01b8988f6ed15f5cb_0.0.0.0/0",
            "transit_gateway_attachment_id": "tgw-attach-03ab27a40727e5d25",
            "transit_gateway_route_table_id": "tgw-rtb-01b8988f6ed15f5cb"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.tgw",
            "aws_ec2_transit_gateway_route_table.tgw_spokes",
            "aws_ec2_transit_gateway_vpc_attachment.tgw_security",
            "aws_subnet.vpc_security_tgw_1",
            "aws_subnet.vpc_security_tgw_2",
            "aws_vpc.vpc_security",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table",
      "name": "tgw_security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:283901980185:transit-gateway-route-table/tgw-rtb-0ac7b2e328052bd86",
            "default_association_route_table": false,
            "default_propagation_route_table": false,
            "id": "tgw-rtb-0ac7b2e328052bd86",
            "tags": {
              "Name": "tgw-rtb-security"
            },
            "tags_all": {
              "Name": "tgw-rtb-security"
            },
            "transit_gateway_id": "tgw-0e89e6f22bbf4ccab"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.tgw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table",
      "name": "tgw_spokes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:283901980185:transit-gateway-route-table/tgw-rtb-01b8988f6ed15f5cb",
            "default_association_route_table": false,
            "default_propagation_route_table": false,
            "id": "tgw-rtb-01b8988f6ed15f5cb",
            "tags": {
              "Name": "tgw-rtb-spokes"
            },
            "tags_all": {
              "Name": "tgw-rtb-spokes"
            },
            "transit_gateway_id": "tgw-0e89e6f22bbf4ccab"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.tgw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_association",
      "name": "vpc_security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-0ac7b2e328052bd86_tgw-attach-03ab27a40727e5d25",
            "resource_id": "vpc-0fba2b997cd9de3b1",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-03ab27a40727e5d25",
            "transit_gateway_route_table_id": "tgw-rtb-0ac7b2e328052bd86"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.tgw",
            "aws_ec2_transit_gateway_route_table.tgw_security",
            "aws_ec2_transit_gateway_vpc_attachment.tgw_security",
            "aws_subnet.vpc_security_tgw_1",
            "aws_subnet.vpc_security_tgw_2",
            "aws_vpc.vpc_security",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "tgw_security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-03ab27a40727e5d25",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-020afb157b3ca95b6",
              "subnet-06d22975542b0eac3"
            ],
            "tags": {
              "Name": "tgw_attachment_security"
            },
            "tags_all": {
              "Name": "tgw_attachment_security"
            },
            "transit_gateway_default_route_table_association": false,
            "transit_gateway_default_route_table_propagation": false,
            "transit_gateway_id": "tgw-0e89e6f22bbf4ccab",
            "vpc_id": "vpc-0fba2b997cd9de3b1",
            "vpc_owner_id": "283901980185"
          },
          "dependencies": [
            "aws_vpc.vpc_security",
            "data.aws_availability_zones.available",
            "aws_ec2_transit_gateway.tgw",
            "aws_subnet.vpc_security_tgw_1",
            "aws_subnet.vpc_security_tgw_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vpc_security_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:283901980185:internet-gateway/igw-0927ab25f4d95fdb0",
            "id": "igw-0927ab25f4d95fdb0",
            "owner_id": "283901980185",
            "tags": {
              "Name": "vpc_securty_igw"
            },
            "tags_all": {
              "Name": "vpc_securty_igw"
            },
            "vpc_id": "vpc-0fba2b997cd9de3b1"
          },
          "dependencies": [
            "aws_vpc.vpc_security"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "vpc_security_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0927ab25f4d95fdb0",
            "id": "r-rtb-00943e54c2d2800701080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00943e54c2d280070",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_security",
            "aws_internet_gateway.vpc_security_igw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "vpc_security_tgw_1_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-084d16a06ce6d0e5a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "eni-060c8b6fce38e9ad1",
            "origin": "CreateRoute",
            "route_table_id": "rtb-084d16a06ce6d0e5a",
            "state": "blackhole",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ngfw1.aws_network_interface.eni-trust",
            "aws_route_table.vpc_security_tgw_1",
            "aws_security_group.allow_all",
            "aws_subnet.vpc_security_private_1",
            "aws_vpc.vpc_security",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "vpc_security_tgw_1_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "10.0.0.0/8",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-084d16a06ce6d0e5a3423270202",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "eni-060c8b6fce38e9ad1",
            "origin": "CreateRoute",
            "route_table_id": "rtb-084d16a06ce6d0e5a",
            "state": "blackhole",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_security",
            "data.aws_availability_zones.available",
            "module.ngfw1.aws_network_interface.eni-trust",
            "aws_route_table.vpc_security_tgw_1",
            "aws_security_group.allow_all",
            "aws_subnet.vpc_security_private_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "vpc_security_tgw_2_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0fb4f3aa6d2e2eccb1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "eni-06f9413a0573b50ef",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0fb4f3aa6d2e2eccb",
            "state": "blackhole",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.vpc_security_private_2",
            "aws_vpc.vpc_security",
            "data.aws_availability_zones.available",
            "module.ngfw2.aws_network_interface.eni-trust",
            "aws_route_table.vpc_security_tgw_2",
            "aws_security_group.allow_all"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "vpc_security_tgw_2_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "10.0.0.0/8",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0fb4f3aa6d2e2eccb3423270202",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "eni-06f9413a0573b50ef",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0fb4f3aa6d2e2eccb",
            "state": "blackhole",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ngfw2.aws_network_interface.eni-trust",
            "aws_route_table.vpc_security_tgw_2",
            "aws_security_group.allow_all",
            "aws_subnet.vpc_security_private_2",
            "aws_vpc.vpc_security",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "vpc_security_trust_1_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "10.0.0.0/8",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-099be2ac94279bd193423270202",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-099be2ac94279bd19",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-0e89e6f22bbf4ccab",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_security",
            "aws_ec2_transit_gateway.tgw",
            "aws_route_table.vpc_security_private_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "vpc_security_trust_2_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "10.0.0.0/8",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-08ab6f177a06a739c3423270202",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08ab6f177a06a739c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-0e89e6f22bbf4ccab",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.tgw",
            "aws_route_table.vpc_security_private_2",
            "aws_vpc.vpc_security"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc_security_private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:283901980185:route-table/rtb-099be2ac94279bd19",
            "id": "rtb-099be2ac94279bd19",
            "owner_id": "283901980185",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/8",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0e89e6f22bbf4ccab",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_1"
            },
            "tags_all": {
              "Name": "private_1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fba2b997cd9de3b1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_security"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc_security_private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:283901980185:route-table/rtb-08ab6f177a06a739c",
            "id": "rtb-08ab6f177a06a739c",
            "owner_id": "283901980185",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/8",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0e89e6f22bbf4ccab",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_2"
            },
            "tags_all": {
              "Name": "private_2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fba2b997cd9de3b1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_security"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc_security_tgw_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:283901980185:route-table/rtb-084d16a06ce6d0e5a",
            "id": "rtb-084d16a06ce6d0e5a",
            "owner_id": "283901980185",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "eni-060c8b6fce38e9ad1",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/8",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "eni-060c8b6fce38e9ad1",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tgw_1"
            },
            "tags_all": {
              "Name": "tgw_1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fba2b997cd9de3b1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_security"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc_security_tgw_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:283901980185:route-table/rtb-0fb4f3aa6d2e2eccb",
            "id": "rtb-0fb4f3aa6d2e2eccb",
            "owner_id": "283901980185",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "eni-06f9413a0573b50ef",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/8",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "eni-06f9413a0573b50ef",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tgw_2"
            },
            "tags_all": {
              "Name": "tgw_2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fba2b997cd9de3b1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_security"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc_security_private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a9a57dcae4c24cce",
            "route_table_id": "rtb-099be2ac94279bd19",
            "subnet_id": "subnet-0d2a211a2233fdbbf"
          },
          "dependencies": [
            "aws_subnet.vpc_security_private_1",
            "aws_vpc.vpc_security",
            "data.aws_availability_zones.available",
            "aws_route_table.vpc_security_private_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc_security_private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-082063fcda37c0d1a",
            "route_table_id": "rtb-08ab6f177a06a739c",
            "subnet_id": "subnet-0aa00bbc8e40fac58"
          },
          "dependencies": [
            "aws_route_table.vpc_security_private_2",
            "aws_subnet.vpc_security_private_2",
            "aws_vpc.vpc_security",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc_security_tgw_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0955a6f4ac2b46682",
            "route_table_id": "rtb-084d16a06ce6d0e5a",
            "subnet_id": "subnet-06d22975542b0eac3"
          },
          "dependencies": [
            "aws_vpc.vpc_security",
            "data.aws_availability_zones.available",
            "aws_route_table.vpc_security_tgw_1",
            "aws_subnet.vpc_security_tgw_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc_security_tgw_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-073b5f81e678e0a5c",
            "route_table_id": "rtb-0fb4f3aa6d2e2eccb",
            "subnet_id": "subnet-020afb157b3ca95b6"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "aws_route_table.vpc_security_tgw_2",
            "aws_subnet.vpc_security_tgw_2",
            "aws_vpc.vpc_security"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:283901980185:security-group/sg-0d307e6803ec7ae58",
            "description": "Allow all inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d307e6803ec7ae58",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_all",
            "name_prefix": "",
            "owner_id": "283901980185",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0fba2b997cd9de3b1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_security"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_https_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:283901980185:security-group/sg-0641f427f1151ee07",
            "description": "Allow HTTPS and SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0641f427f1151ee07",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow_https_ssh",
            "name_prefix": "",
            "owner_id": "283901980185",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0fba2b997cd9de3b1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_security"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-2385296623",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0641f427f1151ee07",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_https_ssh",
            "aws_vpc.vpc_security"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_all_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-3858315427",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0d307e6803ec7ae58",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_all",
            "aws_vpc.vpc_security"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_all_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-3443009598",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0d307e6803ec7ae58",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_all",
            "aws_vpc.vpc_security"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_https_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 443,
            "id": "sgrule-4117327939",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0641f427f1151ee07",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_https_ssh",
            "aws_vpc.vpc_security"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_ssh_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-2396307497",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0641f427f1151ee07",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_https_ssh",
            "aws_vpc.vpc_security"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc_security_private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:283901980185:subnet/subnet-0d2a211a2233fdbbf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "172.31.2.0/24",
            "id": "subnet-0d2a211a2233fdbbf",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "283901980185",
            "tags": {
              "Name": "vpc_security_private_1"
            },
            "tags_all": {
              "Name": "vpc_security_private_1"
            },
            "vpc_id": "vpc-0fba2b997cd9de3b1"
          },
          "dependencies": [
            "aws_vpc.vpc_security",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc_security_private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:283901980185:subnet/subnet-0aa00bbc8e40fac58",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "172.31.5.0/24",
            "id": "subnet-0aa00bbc8e40fac58",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "283901980185",
            "tags": {
              "Name": "vpc_security_private_2"
            },
            "tags_all": {
              "Name": "vpc_security_private_2"
            },
            "vpc_id": "vpc-0fba2b997cd9de3b1"
          },
          "dependencies": [
            "aws_vpc.vpc_security",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc_security_public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:283901980185:subnet/subnet-04459e8c78c31f3f5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "172.31.1.0/24",
            "id": "subnet-04459e8c78c31f3f5",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "283901980185",
            "tags": {
              "Name": "vpc_security_public_1"
            },
            "tags_all": {
              "Name": "vpc_security_public_1"
            },
            "vpc_id": "vpc-0fba2b997cd9de3b1"
          },
          "dependencies": [
            "aws_vpc.vpc_security",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc_security_public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:283901980185:subnet/subnet-0d1ddd8c1ddd26d60",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "172.31.4.0/24",
            "id": "subnet-0d1ddd8c1ddd26d60",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "283901980185",
            "tags": {
              "Name": "vpc_security_public_2"
            },
            "tags_all": {
              "Name": "vpc_security_public_2"
            },
            "vpc_id": "vpc-0fba2b997cd9de3b1"
          },
          "dependencies": [
            "aws_vpc.vpc_security",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc_security_tgw_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:283901980185:subnet/subnet-06d22975542b0eac3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "172.31.3.0/24",
            "id": "subnet-06d22975542b0eac3",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "283901980185",
            "tags": {
              "Name": "vpc_security_tgw_1"
            },
            "tags_all": {
              "Name": "vpc_security_tgw_1"
            },
            "vpc_id": "vpc-0fba2b997cd9de3b1"
          },
          "dependencies": [
            "aws_vpc.vpc_security",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc_security_tgw_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:283901980185:subnet/subnet-020afb157b3ca95b6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "172.31.6.0/24",
            "id": "subnet-020afb157b3ca95b6",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "283901980185",
            "tags": {
              "Name": "vpc_security_tgw_2"
            },
            "tags_all": {
              "Name": "vpc_security_tgw_2"
            },
            "vpc_id": "vpc-0fba2b997cd9de3b1"
          },
          "dependencies": [
            "aws_vpc.vpc_security",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:283901980185:vpc/vpc-0fba2b997cd9de3b1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/20",
            "default_network_acl_id": "acl-03b5ae29cc6e48e61",
            "default_route_table_id": "rtb-00943e54c2d280070",
            "default_security_group_id": "sg-06396efaa4a899b36",
            "dhcp_options_id": "dopt-06268da3630ffdbaa",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0fba2b997cd9de3b1",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-00943e54c2d280070",
            "owner_id": "283901980185",
            "tags": {
              "Name": "vpc_security"
            },
            "tags_all": {
              "Name": "vpc_security"
            }
          }
        }
      ]
    },
    {
      "module": "module.ngfw1",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip-management",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-039eb860f8ddcabe2",
            "association_id": "eipassoc-0872d93682f68683f",
            "domain": "vpc",
            "id": "eipalloc-039eb860f8ddcabe2",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-0246ded0fd8e66e86",
            "private_dns": "ip-172-31-1-174.eu-central-1.compute.internal",
            "private_ip": "172.31.1.174",
            "public_dns": "ec2-3-67-253-170.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.67.253.170",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip_ngfw1_management"
            },
            "tags_all": {
              "Name": "eip_ngfw1_management"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_vpc.vpc_security",
            "data.aws_availability_zones.available",
            "module.ngfw1.aws_network_interface.eni-management",
            "aws_security_group.allow_https_ssh",
            "aws_subnet.vpc_security_public_1"
          ]
        }
      ]
    },
    {
      "module": "module.ngfw1",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip-untrust",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0518042f12a5f740c",
            "association_id": "eipassoc-0b314c2b963f677a4",
            "domain": "vpc",
            "id": "eipalloc-0518042f12a5f740c",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-055f13478240679a2",
            "private_dns": "ip-172-31-1-45.eu-central-1.compute.internal",
            "private_ip": "172.31.1.45",
            "public_dns": "ec2-18-157-192-179.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.157.192.179",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip_ngfw1_untrust"
            },
            "tags_all": {
              "Name": "eip_ngfw1_untrust"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_security_group.allow_all",
            "aws_subnet.vpc_security_public_1",
            "aws_vpc.vpc_security",
            "data.aws_availability_zones.available",
            "module.ngfw1.aws_network_interface.eni-untrust"
          ]
        }
      ]
    },
    {
      "module": "module.ngfw1",
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance-ngfw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cea6fce3f14540f3",
            "arn": "arn:aws:ec2:eu-central-1:283901980185:instance/i-098193868f101a8d0",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": true,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ngfw_bootstrap_profile",
            "id": "i-098193868f101a8d0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m5.xlarge",
            "ipv6_address_count": 0,
            "key_name": "pankeypair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-055f13478240679a2"
              },
              {
                "delete_on_termination": false,
                "device_index": 1,
                "network_interface_id": "eni-0246ded0fd8e66e86"
              },
              {
                "delete_on_termination": false,
                "device_index": 2,
                "network_interface_id": "eni-060c8b6fce38e9ad1"
              }
            ],
            "primary_network_interface_id": "eni-055f13478240679a2",
            "private_dns": "ip-172-31-1-45.eu-central-1.compute.internal",
            "private_ip": "172.31.1.45",
            "public_ip": "18.157.192.179",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 180,
                "throughput": 0,
                "volume_id": "vol-07ca51026edefe7c8",
                "volume_size": 60,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-04459e8c78c31f3f5",
            "tags": {
              "Name": "ngfw1"
            },
            "tags_all": {
              "Name": "ngfw1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d307e6803ec7ae58"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.bootstrap_profile",
            "module.ngfw1.aws_network_interface.eni-management",
            "module.ngfw1.aws_network_interface.eni-trust",
            "module.ngfw1.aws_network_interface.eni-untrust",
            "module.ngfw1.data.aws_ami.panw_ngfw"
          ]
        }
      ]
    },
    {
      "module": "module.ngfw1",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "eni-management",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:283901980185:network-interface/eni-0246ded0fd8e66e86",
            "id": "eni-0246ded0fd8e66e86",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_prefix_count": 0,
            "mac_address": "02:c8:7c:ab:e4:72",
            "owner_id": "283901980185",
            "private_ip": "172.31.1.174",
            "private_ips": [
              "172.31.1.174"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0641f427f1151ee07"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04459e8c78c31f3f5",
            "tags": {
              "Name": "eni_ngfw1_management"
            },
            "tags_all": {
              "Name": "eni_ngfw1_management"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "aws_security_group.allow_https_ssh",
            "aws_subnet.vpc_security_public_1",
            "aws_vpc.vpc_security"
          ]
        }
      ]
    },
    {
      "module": "module.ngfw1",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "eni-trust",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:283901980185:network-interface/eni-060c8b6fce38e9ad1",
            "id": "eni-060c8b6fce38e9ad1",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_prefix_count": 0,
            "mac_address": "02:b5:34:45:2f:f0",
            "owner_id": "283901980185",
            "private_ip": "172.31.2.45",
            "private_ips": [
              "172.31.2.45"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0d307e6803ec7ae58"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0d2a211a2233fdbbf",
            "tags": {
              "Name": "eni_ngfw1_trust"
            },
            "tags_all": {
              "Name": "eni_ngfw1_trust"
            }
          },
          "dependencies": [
            "aws_security_group.allow_all",
            "aws_subnet.vpc_security_private_1",
            "aws_vpc.vpc_security",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ngfw1",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "eni-untrust",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:283901980185:network-interface/eni-055f13478240679a2",
            "id": "eni-055f13478240679a2",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_prefix_count": 0,
            "mac_address": "02:04:2b:c4:fb:d0",
            "owner_id": "283901980185",
            "private_ip": "172.31.1.45",
            "private_ips": [
              "172.31.1.45"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0d307e6803ec7ae58"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-04459e8c78c31f3f5",
            "tags": {
              "Name": "eni_ngfw1_untrust"
            },
            "tags_all": {
              "Name": "eni_ngfw1_untrust"
            }
          },
          "dependencies": [
            "aws_security_group.allow_all",
            "aws_subnet.vpc_security_public_1",
            "aws_vpc.vpc_security",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ngfw2",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip-management",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0031ea542ba73cfeb",
            "association_id": "eipassoc-0acdafac35fef1ea0",
            "domain": "vpc",
            "id": "eipalloc-0031ea542ba73cfeb",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-032a89ca2ebaccc51",
            "private_dns": "ip-172-31-4-144.eu-central-1.compute.internal",
            "private_ip": "172.31.4.144",
            "public_dns": "ec2-3-67-50-41.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.67.50.41",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip_ngfw2_management"
            },
            "tags_all": {
              "Name": "eip_ngfw2_management"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_vpc.vpc_security",
            "data.aws_availability_zones.available",
            "module.ngfw2.aws_network_interface.eni-management",
            "aws_security_group.allow_https_ssh",
            "aws_subnet.vpc_security_public_2"
          ]
        }
      ]
    },
    {
      "module": "module.ngfw2",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip-untrust",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f688ae2d30237d15",
            "association_id": "eipassoc-02ada5599309489a1",
            "domain": "vpc",
            "id": "eipalloc-0f688ae2d30237d15",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-086e789d0ca1174c9",
            "private_dns": "ip-172-31-4-45.eu-central-1.compute.internal",
            "private_ip": "172.31.4.45",
            "public_dns": "ec2-3-64-90-69.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.64.90.69",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip_ngfw2_untrust"
            },
            "tags_all": {
              "Name": "eip_ngfw2_untrust"
            },
            "vpc": true
          },
          "dependencies": [
            "module.ngfw2.aws_network_interface.eni-untrust",
            "aws_security_group.allow_all",
            "aws_subnet.vpc_security_public_2",
            "aws_vpc.vpc_security",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ngfw2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance-ngfw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cea6fce3f14540f3",
            "arn": "arn:aws:ec2:eu-central-1:283901980185:instance/i-003acc7380a337869",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": true,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ngfw_bootstrap_profile2",
            "id": "i-003acc7380a337869",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m5.xlarge",
            "ipv6_address_count": 0,
            "key_name": "pankeypair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-086e789d0ca1174c9"
              },
              {
                "delete_on_termination": false,
                "device_index": 1,
                "network_interface_id": "eni-032a89ca2ebaccc51"
              },
              {
                "delete_on_termination": false,
                "device_index": 2,
                "network_interface_id": "eni-06f9413a0573b50ef"
              }
            ],
            "primary_network_interface_id": "eni-086e789d0ca1174c9",
            "private_dns": "ip-172-31-4-45.eu-central-1.compute.internal",
            "private_ip": "172.31.4.45",
            "public_ip": "3.64.90.69",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 180,
                "throughput": 0,
                "volume_id": "vol-088a3892427fcbb3d",
                "volume_size": 60,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0d1ddd8c1ddd26d60",
            "tags": {
              "Name": "ngfw2"
            },
            "tags_all": {
              "Name": "ngfw2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d307e6803ec7ae58"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.bootstrap_profile2",
            "module.ngfw2.aws_network_interface.eni-management",
            "module.ngfw2.aws_network_interface.eni-trust",
            "module.ngfw2.aws_network_interface.eni-untrust",
            "module.ngfw2.data.aws_ami.panw_ngfw"
          ]
        }
      ]
    },
    {
      "module": "module.ngfw2",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "eni-management",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:283901980185:network-interface/eni-032a89ca2ebaccc51",
            "id": "eni-032a89ca2ebaccc51",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_prefix_count": 0,
            "mac_address": "06:c0:75:a8:63:da",
            "owner_id": "283901980185",
            "private_ip": "172.31.4.144",
            "private_ips": [
              "172.31.4.144"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0641f427f1151ee07"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d1ddd8c1ddd26d60",
            "tags": {
              "Name": "eni_ngfw2_management"
            },
            "tags_all": {
              "Name": "eni_ngfw2_management"
            }
          },
          "dependencies": [
            "aws_security_group.allow_https_ssh",
            "aws_subnet.vpc_security_public_2",
            "aws_vpc.vpc_security",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ngfw2",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "eni-trust",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:283901980185:network-interface/eni-06f9413a0573b50ef",
            "id": "eni-06f9413a0573b50ef",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_prefix_count": 0,
            "mac_address": "06:f0:4e:5e:d2:7e",
            "owner_id": "283901980185",
            "private_ip": "172.31.5.45",
            "private_ips": [
              "172.31.5.45"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0d307e6803ec7ae58"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0aa00bbc8e40fac58",
            "tags": {
              "Name": "eni_ngfw2_trust"
            },
            "tags_all": {
              "Name": "eni_ngfw2_trust"
            }
          },
          "dependencies": [
            "aws_security_group.allow_all",
            "aws_subnet.vpc_security_private_2",
            "aws_vpc.vpc_security",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ngfw2",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "eni-untrust",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:283901980185:network-interface/eni-086e789d0ca1174c9",
            "id": "eni-086e789d0ca1174c9",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_prefix_count": 0,
            "mac_address": "06:aa:a1:9e:b1:90",
            "owner_id": "283901980185",
            "private_ip": "172.31.4.45",
            "private_ips": [
              "172.31.4.45"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0d307e6803ec7ae58"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0d1ddd8c1ddd26d60",
            "tags": {
              "Name": "eni_ngfw2_untrust"
            },
            "tags_all": {
              "Name": "eni_ngfw2_untrust"
            }
          },
          "dependencies": [
            "aws_security_group.allow_all",
            "aws_subnet.vpc_security_public_2",
            "aws_vpc.vpc_security",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.spoke1",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_association",
      "name": "vpc_spoke_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-01b8988f6ed15f5cb_tgw-attach-0d11f11b555e1c069",
            "resource_id": "vpc-0c4c6e1e8d9ecb579",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-0d11f11b555e1c069",
            "transit_gateway_route_table_id": "tgw-rtb-01b8988f6ed15f5cb"
          },
          "dependencies": [
            "module.spoke1.aws_subnet.secondary",
            "module.spoke1.aws_vpc.vpc_spoke",
            "module.spoke1.data.aws_availability_zones.available",
            "aws_ec2_transit_gateway.tgw",
            "aws_ec2_transit_gateway_route_table.tgw_spokes",
            "module.spoke1.aws_ec2_transit_gateway_vpc_attachment.tgw_spoke_attachment",
            "module.spoke1.aws_subnet.primary"
          ]
        }
      ]
    },
    {
      "module": "module.spoke1",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_propagation",
      "name": "route_table_propagation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-0ac7b2e328052bd86_tgw-attach-0d11f11b555e1c069",
            "resource_id": "vpc-0c4c6e1e8d9ecb579",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-0d11f11b555e1c069",
            "transit_gateway_route_table_id": "tgw-rtb-0ac7b2e328052bd86"
          },
          "dependencies": [
            "module.spoke1.aws_vpc.vpc_spoke",
            "module.spoke1.data.aws_availability_zones.available",
            "aws_ec2_transit_gateway.tgw",
            "aws_ec2_transit_gateway_route_table.tgw_security",
            "module.spoke1.aws_ec2_transit_gateway_vpc_attachment.tgw_spoke_attachment",
            "module.spoke1.aws_subnet.primary",
            "module.spoke1.aws_subnet.secondary"
          ]
        }
      ]
    },
    {
      "module": "module.spoke1",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "tgw_spoke_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-0d11f11b555e1c069",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-0d6fad84932aca47a",
              "subnet-0e21645de9ec8e026"
            ],
            "tags": {
              "Name": "tgw_attachment_spoke_10.1.0.0/16"
            },
            "tags_all": {
              "Name": "tgw_attachment_spoke_10.1.0.0/16"
            },
            "transit_gateway_default_route_table_association": false,
            "transit_gateway_default_route_table_propagation": false,
            "transit_gateway_id": "tgw-0e89e6f22bbf4ccab",
            "vpc_id": "vpc-0c4c6e1e8d9ecb579",
            "vpc_owner_id": "283901980185"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.tgw",
            "module.spoke1.aws_subnet.primary",
            "module.spoke1.aws_subnet.secondary",
            "module.spoke1.aws_vpc.vpc_spoke",
            "module.spoke1.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.spoke1",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e18ae6e39f4962f0",
            "arn": "arn:aws:ec2:eu-central-1:283901980185:instance/i-0cc3d4e3120e0bc4d",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cc3d4e3120e0bc4d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "pankeypair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-001162134b4b50eac",
            "private_dns": "ip-10-1-1-45.eu-central-1.compute.internal",
            "private_ip": "10.1.1.45",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d82da21faae24ae4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-028d40f99b8996b96"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d6fad84932aca47a",
            "tags": {
              "Name": "spoke1-server1"
            },
            "tags_all": {
              "Name": "spoke1-server1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-028d40f99b8996b96"
            ]
          },
          "dependencies": [
            "module.spoke1.aws_security_group.server_sg",
            "module.spoke1.aws_subnet.primary",
            "module.spoke1.data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "module": "module.spoke1",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e18ae6e39f4962f0",
            "arn": "arn:aws:ec2:eu-central-1:283901980185:instance/i-0626bbda6f2f639cd",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0626bbda6f2f639cd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "pankeypair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08ee4299b59ba105d",
            "private_dns": "ip-10-1-2-45.eu-central-1.compute.internal",
            "private_ip": "10.1.2.45",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c3a0ec19b7ac0505",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-028d40f99b8996b96"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e21645de9ec8e026",
            "tags": {
              "Name": "spoke1-server2"
            },
            "tags_all": {
              "Name": "spoke1-server2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-028d40f99b8996b96"
            ]
          },
          "dependencies": [
            "module.spoke1.aws_security_group.server_sg",
            "module.spoke1.aws_subnet.secondary",
            "module.spoke1.data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "module": "module.spoke1",
      "mode": "managed",
      "type": "aws_route",
      "name": "vpc_spoke_route_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "10.0.0.0/8",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c9b229131ac512043423270202",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c9b229131ac51204",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-0e89e6f22bbf4ccab",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.tgw",
            "module.spoke1.aws_vpc.vpc_spoke"
          ]
        }
      ]
    },
    {
      "module": "module.spoke1",
      "mode": "managed",
      "type": "aws_route",
      "name": "vpc_spoke_route_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "192.168.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c9b229131ac512043901788224",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c9b229131ac51204",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-0e89e6f22bbf4ccab",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.spoke1.aws_vpc.vpc_spoke",
            "aws_ec2_transit_gateway.tgw"
          ]
        }
      ]
    },
    {
      "module": "module.spoke1",
      "mode": "managed",
      "type": "aws_route",
      "name": "vpc_spoke_route_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c9b229131ac512041080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c9b229131ac51204",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-0e89e6f22bbf4ccab",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.tgw",
            "module.spoke1.aws_vpc.vpc_spoke"
          ]
        }
      ]
    },
    {
      "module": "module.spoke1",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "server_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:283901980185:security-group/sg-028d40f99b8996b96",
            "description": "Allow select inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-028d40f99b8996b96",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8",
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "server_sg",
            "name_prefix": "",
            "owner_id": "283901980185",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c4c6e1e8d9ecb579"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.spoke1.aws_vpc.vpc_spoke"
          ]
        }
      ]
    },
    {
      "module": "module.spoke1",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_server_sg_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-205890024",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-028d40f99b8996b96",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.spoke1.aws_security_group.server_sg",
            "module.spoke1.aws_vpc.vpc_spoke"
          ]
        }
      ]
    },
    {
      "module": "module.spoke1",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_server_sg_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/8",
              "192.168.0.0/16"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-403187601",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-028d40f99b8996b96",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.spoke1.aws_security_group.server_sg",
            "module.spoke1.aws_vpc.vpc_spoke"
          ]
        }
      ]
    },
    {
      "module": "module.spoke1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "primary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:283901980185:subnet/subnet-0d6fad84932aca47a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.1.1.0/24",
            "id": "subnet-0d6fad84932aca47a",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "283901980185",
            "tags": {
              "Name": "vpc_spokeA_10.1.1.0/24"
            },
            "tags_all": {
              "Name": "vpc_spokeA_10.1.1.0/24"
            },
            "vpc_id": "vpc-0c4c6e1e8d9ecb579"
          },
          "dependencies": [
            "module.spoke1.aws_vpc.vpc_spoke",
            "module.spoke1.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.spoke1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "secondary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:283901980185:subnet/subnet-0e21645de9ec8e026",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.1.2.0/24",
            "id": "subnet-0e21645de9ec8e026",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "283901980185",
            "tags": {
              "Name": "vpc_spokeB_10.1.2.0/24"
            },
            "tags_all": {
              "Name": "vpc_spokeB_10.1.2.0/24"
            },
            "vpc_id": "vpc-0c4c6e1e8d9ecb579"
          },
          "dependencies": [
            "module.spoke1.aws_vpc.vpc_spoke",
            "module.spoke1.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.spoke1",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_spoke",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:283901980185:vpc/vpc-0c4c6e1e8d9ecb579",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-044ff50785c478b0e",
            "default_route_table_id": "rtb-0c9b229131ac51204",
            "default_security_group_id": "sg-0c821f97b91afbdfa",
            "dhcp_options_id": "dopt-06268da3630ffdbaa",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0c4c6e1e8d9ecb579",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c9b229131ac51204",
            "owner_id": "283901980185",
            "tags": {
              "Name": "vpc_spoke_10.1.0.0/16"
            },
            "tags_all": {
              "Name": "vpc_spoke_10.1.0.0/16"
            }
          }
        }
      ]
    },
    {
      "module": "module.spoke2",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_association",
      "name": "vpc_spoke_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-01b8988f6ed15f5cb_tgw-attach-0c73cbc9a0faa2991",
            "resource_id": "vpc-0c834bfc489bd48a6",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-0c73cbc9a0faa2991",
            "transit_gateway_route_table_id": "tgw-rtb-01b8988f6ed15f5cb"
          },
          "dependencies": [
            "aws_ec2_transit_gateway_route_table.tgw_spokes",
            "module.spoke2.aws_ec2_transit_gateway_vpc_attachment.tgw_spoke_attachment",
            "module.spoke2.aws_subnet.primary",
            "module.spoke2.aws_subnet.secondary",
            "module.spoke2.aws_vpc.vpc_spoke",
            "module.spoke2.data.aws_availability_zones.available",
            "aws_ec2_transit_gateway.tgw"
          ]
        }
      ]
    },
    {
      "module": "module.spoke2",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_propagation",
      "name": "route_table_propagation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-0ac7b2e328052bd86_tgw-attach-0c73cbc9a0faa2991",
            "resource_id": "vpc-0c834bfc489bd48a6",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-0c73cbc9a0faa2991",
            "transit_gateway_route_table_id": "tgw-rtb-0ac7b2e328052bd86"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.tgw",
            "aws_ec2_transit_gateway_route_table.tgw_security",
            "module.spoke2.aws_ec2_transit_gateway_vpc_attachment.tgw_spoke_attachment",
            "module.spoke2.aws_subnet.primary",
            "module.spoke2.aws_subnet.secondary",
            "module.spoke2.aws_vpc.vpc_spoke",
            "module.spoke2.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.spoke2",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "tgw_spoke_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-0c73cbc9a0faa2991",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-058d7de757265e1d1",
              "subnet-0c0fb971412b5491b"
            ],
            "tags": {
              "Name": "tgw_attachment_spoke_10.2.0.0/16"
            },
            "tags_all": {
              "Name": "tgw_attachment_spoke_10.2.0.0/16"
            },
            "transit_gateway_default_route_table_association": false,
            "transit_gateway_default_route_table_propagation": false,
            "transit_gateway_id": "tgw-0e89e6f22bbf4ccab",
            "vpc_id": "vpc-0c834bfc489bd48a6",
            "vpc_owner_id": "283901980185"
          },
          "dependencies": [
            "module.spoke2.aws_subnet.secondary",
            "module.spoke2.aws_vpc.vpc_spoke",
            "module.spoke2.data.aws_availability_zones.available",
            "aws_ec2_transit_gateway.tgw",
            "module.spoke2.aws_subnet.primary"
          ]
        }
      ]
    },
    {
      "module": "module.spoke2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e18ae6e39f4962f0",
            "arn": "arn:aws:ec2:eu-central-1:283901980185:instance/i-05871ccea9a3ffbb8",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05871ccea9a3ffbb8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "pankeypair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08d097ec8aab9014c",
            "private_dns": "ip-10-2-1-45.eu-central-1.compute.internal",
            "private_ip": "10.2.1.45",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02b8bd44a0d38bcfe",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-01ddffb1ea35d5aab"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c0fb971412b5491b",
            "tags": {
              "Name": "spoke2-server"
            },
            "tags_all": {
              "Name": "spoke2-server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-01ddffb1ea35d5aab"
            ]
          },
          "dependencies": [
            "module.spoke2.aws_security_group.server_sg",
            "module.spoke2.aws_subnet.primary",
            "module.spoke2.data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "module": "module.spoke2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e18ae6e39f4962f0",
            "arn": "arn:aws:ec2:eu-central-1:283901980185:instance/i-0231c4080a6523d2e",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0231c4080a6523d2e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "pankeypair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0cdd688f584707aaa",
            "private_dns": "ip-10-2-2-45.eu-central-1.compute.internal",
            "private_ip": "10.2.2.45",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0db2ea150dfc33bc5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-01ddffb1ea35d5aab"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-058d7de757265e1d1",
            "tags": {
              "Name": "spoke2-server2"
            },
            "tags_all": {
              "Name": "spoke2-server2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-01ddffb1ea35d5aab"
            ]
          },
          "dependencies": [
            "module.spoke2.aws_security_group.server_sg",
            "module.spoke2.aws_subnet.secondary",
            "module.spoke2.data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "module": "module.spoke2",
      "mode": "managed",
      "type": "aws_route",
      "name": "vpc_spoke_route_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "10.0.0.0/8",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a70e620e83fc7a5d3423270202",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a70e620e83fc7a5d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-0e89e6f22bbf4ccab",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.tgw",
            "module.spoke2.aws_vpc.vpc_spoke"
          ]
        }
      ]
    },
    {
      "module": "module.spoke2",
      "mode": "managed",
      "type": "aws_route",
      "name": "vpc_spoke_route_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "192.168.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a70e620e83fc7a5d3901788224",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a70e620e83fc7a5d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-0e89e6f22bbf4ccab",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.spoke2.aws_vpc.vpc_spoke",
            "aws_ec2_transit_gateway.tgw"
          ]
        }
      ]
    },
    {
      "module": "module.spoke2",
      "mode": "managed",
      "type": "aws_route",
      "name": "vpc_spoke_route_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a70e620e83fc7a5d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a70e620e83fc7a5d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-0e89e6f22bbf4ccab",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.tgw",
            "module.spoke2.aws_vpc.vpc_spoke"
          ]
        }
      ]
    },
    {
      "module": "module.spoke2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "server_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:283901980185:security-group/sg-01ddffb1ea35d5aab",
            "description": "Allow select inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01ddffb1ea35d5aab",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8",
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "server_sg",
            "name_prefix": "",
            "owner_id": "283901980185",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c834bfc489bd48a6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.spoke2.aws_vpc.vpc_spoke"
          ]
        }
      ]
    },
    {
      "module": "module.spoke2",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_server_sg_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-2250705827",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-01ddffb1ea35d5aab",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.spoke2.aws_security_group.server_sg",
            "module.spoke2.aws_vpc.vpc_spoke"
          ]
        }
      ]
    },
    {
      "module": "module.spoke2",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_server_sg_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/8",
              "192.168.0.0/16"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-4098472913",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-01ddffb1ea35d5aab",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.spoke2.aws_security_group.server_sg",
            "module.spoke2.aws_vpc.vpc_spoke"
          ]
        }
      ]
    },
    {
      "module": "module.spoke2",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "primary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:283901980185:subnet/subnet-0c0fb971412b5491b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.2.1.0/24",
            "id": "subnet-0c0fb971412b5491b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "283901980185",
            "tags": {
              "Name": "vpc_spokeA_10.2.1.0/24"
            },
            "tags_all": {
              "Name": "vpc_spokeA_10.2.1.0/24"
            },
            "vpc_id": "vpc-0c834bfc489bd48a6"
          },
          "dependencies": [
            "module.spoke2.aws_vpc.vpc_spoke",
            "module.spoke2.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.spoke2",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "secondary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:283901980185:subnet/subnet-058d7de757265e1d1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.2.2.0/24",
            "id": "subnet-058d7de757265e1d1",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "283901980185",
            "tags": {
              "Name": "vpc_spokeB_10.2.2.0/24"
            },
            "tags_all": {
              "Name": "vpc_spokeB_10.2.2.0/24"
            },
            "vpc_id": "vpc-0c834bfc489bd48a6"
          },
          "dependencies": [
            "module.spoke2.aws_vpc.vpc_spoke",
            "module.spoke2.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.spoke2",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_spoke",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:283901980185:vpc/vpc-0c834bfc489bd48a6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.2.0.0/16",
            "default_network_acl_id": "acl-0b4da1302119218c2",
            "default_route_table_id": "rtb-0a70e620e83fc7a5d",
            "default_security_group_id": "sg-00fdac6857d63eceb",
            "dhcp_options_id": "dopt-06268da3630ffdbaa",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0c834bfc489bd48a6",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0a70e620e83fc7a5d",
            "owner_id": "283901980185",
            "tags": {
              "Name": "vpc_spoke_10.2.0.0/16"
            },
            "tags_all": {
              "Name": "vpc_spoke_10.2.0.0/16"
            }
          }
        }
      ]
    }
  ]
}